<resources>

    <!--manually added-->
    <string name="app_name">Grade App</string>
    <string name="slogan">"Education Is Mst To All"</string>
    <string name="welcome"> Welcome, you can find study materials, even attend exams and online classes in this app</string>
    <string name="forward">You can login by clicking \'Get Started\'</string>
    <string name="getsrt">Get Started</string>
    <string name="mobile">Enter your register mobile number</string>
    <string name="otp">Enter otp here</string>
    <string name="re">resend otp</string>
    <string name="L">Login</string>
    <string name="LH">login here</string>
    <string name="gO">get otp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Grade App</string>
    <string name="nav_header_subtitle">grade@support.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="choose_login_method">Choose Login Method</string>


    <!--    navigation drawer items-->
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_track">Track</string>
    <string name="menu_online">Online</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_feedback">feedback</string>

    <!--    Dashboard Fragment Strings-->
    <string name="tab_text_notice">Notice</string>
    <string name="tab_text_news">News</string>

    <!--    Statistics Fragment Strings-->
    <string name="tab_text_attendance">Attendance</string>
    <string name="tab_text_result">Result</string>
    <string name="tab_text_other_activities">Other Activities</string>

    <!--    Live-classes Fragment Strings-->
    <string name="tab_text_live_classes">Live-Classes</string>

    <!--    Assignments Fragment Strings-->
    <string name="tab_text_live_assignments">Assignments Fragment</string>

    <!--    Digital-library Fragment Strings-->
    <string name="tab_text_live_digital_library">Digital Library Fragment</string>

    <!--    Study Material Fragment Strings-->
    <string name="tab_text_study_books">Books</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>


