<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_img" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/colorTransAlbum"/>


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:alpha="1"
            android:scaleType="fitCenter"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/logo_app"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_horizontal"
            android:text="@string/slogan"
            android:textColor="#FDB811"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_btn"
            style="@style/buttonTheme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/getsrt" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/forward"
            android:textColor="#D29039"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>